@@ -14,10 +14,10 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.noear</groupId>
-            <artifactId>solon</artifactId>
-        </dependency>
+        <!--   <dependency>
+               <groupId>org.noear</groupId>
+               <artifactId>solon</artifactId>
+           </dependency>-->
         <!--        <dependency>-->
         <!--            <groupId>org.noear</groupId>-->
         <!--            <artifactId>solon.extend.properties.yaml</artifactId>-->
@@ -75,7 +75,7 @@
                     </annotationProcessorPaths>
                     <source>17</source>
                     <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
                 <version>3.8.1</version>
             </plugin>
